--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
   <!-- End Of NAV part here -->
 
-  <!--Product Display here-->
+  <!-- Product Display here -->
   <div class="container py-5">
     <div class="row">
       <!-- Left Column: Product Images -->
@@ -77,7 +77,6 @@
             <div class="carousel-item active">
               <img src="images/image-product-1.jpg" class="d-block w-100" alt="Big Image">
             </div>
-           
             <div class="carousel-item">
               <img src="images/image-product-2.jpg" class="d-block w-100" alt="Thumbnail 2">
             </div>
@@ -99,28 +98,27 @@
         </div>
         <div class="row mt-3">
           <div class="col-3">
-            <a href="#" class="thumbnail-link active">
+            <a href="#" class="thumbnail-link active" data-bs-target="#productCarousel" data-bs-slide-to="0">
               <img src="images/image-product-1-thumbnail.jpg" class="img-thumbnail img-fluid" alt="Thumbnail 1">
             </a>
           </div>
           <div class="col-3">
-            <a href="#" class="thumbnail-link">
+            <a href="#" class="thumbnail-link" data-bs-target="#productCarousel" data-bs-slide-to="1">
               <img src="images/image-product-2-thumbnail.jpg" class="img-thumbnail img-fluid" alt="Thumbnail 2">
             </a>
           </div>
           <div class="col-3">
-            <a href="#" class="thumbnail-link">
+            <a href="#" class="thumbnail-link" data-bs-target="#productCarousel" data-bs-slide-to="2">
               <img src="images/image-product-3-thumbnail.jpg" class="img-thumbnail img-fluid" alt="Thumbnail 3">
             </a>
           </div>
           <div class="col-3">
-            <a href="#" class="thumbnail-link">
+            <a href="#" class="thumbnail-link" data-bs-target="#productCarousel" data-bs-slide-to="3">
               <img src="images/image-product-4-thumbnail.jpg" class="img-thumbnail img-fluid" alt="Thumbnail 4">
             </a>
           </div>
         </div>
       </div>
-      
       <!-- Right Column: Product Details -->
       <div class="col-lg-6">
         <h3 class="mb-3">SNEAKER COMPANY</h3>
@@ -143,5 +141,52 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="js/nav.js"></script>
+  
+ 
+ 
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+  const productCarousel = new bootstrap.Carousel(document.getElementById('productCarousel'));
+  const thumbnails = document.querySelectorAll('.thumbnail-link');
+  const prevButton = document.querySelector('[data-bs-slide="prev"]');
+  const nextButton = document.querySelector('[data-bs-slide="next"]');
+
+  function updateActiveThumbnail() {
+    const activeItem = document.querySelector('#productCarousel .carousel-item.active');
+    const activeIndex = Array.from(activeItem.parentElement.children).indexOf(activeItem);
+    thumbnails.forEach(thumb => thumb.classList.remove('active'));
+    if (!isNaN(activeIndex) && thumbnails[activeIndex]) {
+      thumbnails[activeIndex].classList.add('active');
+    }
+  }
+
+  thumbnails.forEach((thumbnail, index) => {
+    thumbnail.addEventListener('click', function(e) {
+      e.preventDefault();
+      thumbnails.forEach(thumb => thumb.classList.remove('active'));
+      thumbnail.classList.add('active');
+      productCarousel.to(index);
+    });
+  });
+
+  if (prevButton && nextButton) {
+    prevButton.addEventListener('click', function() {
+      productCarousel.prev();
+    });
+
+    nextButton.addEventListener('click', function() {
+      productCarousel.next();
+    });
+  }
+
+  document.getElementById('productCarousel').addEventListener('slid.bs.carousel', function() {
+    updateActiveThumbnail();
+  });
+
+  updateActiveThumbnail(); // Initial update
+});
+
+  </script>
+
 </body>
 </html>
